release/front-end/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      restartPolicy: Always
      containers:
        - name: front-end
          image:  982534381318.dkr.ecr.ap-southeast-2.amazonaws.com"/group18/devops_project:front-end
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 500Mi
          command: ["/bin/sh", "-c"]
          args: ["npm run start"]
