release/front-end/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-service
  labels:
    name: core-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-header: "*"


spec:
  ingressClassName: nginx
  rules:
    - host: api-ocb-inscope.atomsolution.vn
      http:
        paths:
          - pathType: Prefix
            path: "/v1/va-core-service/(.*)"
            backend:
              service:
                name: core-service
                port:
                  number: 80
